fixed spacing on table and css for langs

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -48,7 +48,7 @@ img {
   text-decoration: underline;
   padding-inline: 1.5rem;
   padding-right: 0rem;
-  padding-left: 3.7rem;
+  padding-left: 2.9rem;
 }
 
 .langs td {
